log
Thu 21 Mar 2024 08:19:48 PM UTC: 
 tests:  0|5
total_score: 0/70
945799f
Thu 21 Mar 2024 08:33:56 PM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:14: error: implicit declaration of function ‘last’ [-Werror=implicit-function-declaration]
   49 |       *(int*)last(L) = i;
      |              ^~~~
exercises.c:49:8: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   49 |       *(int*)last(L) = i;
      |        ^
cc1: all warnings being treated as errors
Compilation failed
87407bc
Thu 21 Mar 2024 08:35:56 PM UTC: 
 exercises.c | 12 +++++-------
 1 file changed, 5 insertions(+), 7 deletions(-)
 tests:  1|4
total_score: 10/70
4418de5
Thu 21 Mar 2024 08:37:02 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
6d6d04b
Thu 21 Mar 2024 08:41:23 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
f714845
Thu 21 Mar 2024 08:48:35 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
ae4260a
Sat 23 Mar 2024 07:50:46 PM UTC: 
 exercises.c | 62 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 62 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:96:11: error: unused variable ‘P3’ [-Werror=unused-variable]
   96 |    Stack* P3 = create_stack();
      |           ^~
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:113:26: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
  113 |         push(pila, cadena[i]);
      |                    ~~~~~~^~~
      |                          |
      |                          char
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘char’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
In file included from test.c:5:
exercises.c:117:15: error: implicit declaration of function ‘isEmpty’ [-Werror=implicit-function-declaration]
  117 |           if (isEmpty(pila)){
      |               ^~~~~~~
exercises.c:120:18: error: expected ‘(’ before ‘{’ token
  120 |           else if{
      |                  ^
      |                  (
exercises.c:122:21: error: comparison between pointer and integer [-Werror]
  122 |             if (top != '('){
      |                     ^~
exercises.c:133:18: error: expected ‘(’ before ‘{’ token
  133 |           else if{
      |                  ^
      |                  (
exercises.c:135:21: error: comparison between pointer and integer [-Werror]
  135 |             if (top != '}'){
      |                     ^~
exercises.c:146:18: error: expected ‘(’ before ‘{’ token
  146 |           else if{
      |                  ^
      |                  (
exercises.c:148:21: error: comparison between pointer and integer [-Werror]
  148 |             if (top != ']'){
      |                     ^~
exercises.c: At top level:
exercises.c:169:1: error: expected identifier or ‘(’ before ‘}’ token
  169 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
32a613c
Sat 23 Mar 2024 07:52:39 PM UTC: 
 exercises.c | 68 ++++++++-----------------------------------------------------
 1 file changed, 8 insertions(+), 60 deletions(-)
 tests:  4|2
total_score: 40/70
824926d
Sat 23 Mar 2024 07:54:17 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  5|1
total_score: 50/70
4023e9e
Sat 23 Mar 2024 07:54:26 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|1
total_score: 50/70
16cc8cf
Sat 23 Mar 2024 08:08:39 PM UTC: 
 exercises.c | 19 ++++++++++---------
 1 file changed, 10 insertions(+), 9 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:97:18: error: comparison between pointer and integer [-Werror]
   97 |    while(top(P1) != -1){
      |                  ^~
exercises.c:98:21: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   98 |      int elemento = top(P1);
      |                     ^~~
exercises.c:99:20: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
   99 |      push(PilaAux, elemento);
      |                    ^~~~~~~~
      |                    |
      |                    int
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘int’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
In file included from test.c:5:
exercises.c:102:23: error: comparison between pointer and integer [-Werror]
  102 |    while(top(PilaAux) != -1){
      |                       ^~
exercises.c:103:21: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
  103 |      int elemento = top(PilaAux);
      |                     ^~~
exercises.c:104:15: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
  104 |      push(P1, elemento);
      |               ^~~~~~~~
      |               |
      |               int
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘int’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
In file included from test.c:5:
exercises.c:105:15: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
  105 |      push(P2, elemento);
      |               ^~~~~~~~
      |               |
      |               int
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘int’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:120:1: error: control reaches end of non-void function [-Werror=return-type]
  120 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8902246
Sat 23 Mar 2024 08:08:57 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:97:18: error: comparison between pointer and integer [-Werror]
   97 |    while(top(P1) != -1){
      |                  ^~
exercises.c:102:23: error: comparison between pointer and integer [-Werror]
  102 |    while(top(PilaAux) != -1){
      |                       ^~
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:120:1: error: control reaches end of non-void function [-Werror=return-type]
  120 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3803a32
Sat 23 Mar 2024 08:09:09 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:120:1: error: control reaches end of non-void function [-Werror=return-type]
  120 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5593c7e
Sat 23 Mar 2024 08:09:28 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|1
total_score: 50/70
308e32c
Sat 23 Mar 2024 08:13:00 PM UTC: 
 exercises.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
 tests:  5|1
total_score: 50/70
bc38c8a
Sat 23 Mar 2024 08:15:33 PM UTC: 
 exercises.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  5|1
total_score: 50/70
8dde26b
Sat 23 Mar 2024 08:16:42 PM UTC: 
 exercises.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
 tests:  5|1
total_score: 50/70
64f05bd
Sat 23 Mar 2024 09:46:25 PM UTC: 
 exercises.c | 30 ++++++++----------------------
 1 file changed, 8 insertions(+), 22 deletions(-)
 tests:  4|1
total_score: 50/70
b767f36
Sat 23 Mar 2024 09:46:40 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  4|1
total_score: 50/70
3448b29
Sat 23 Mar 2024 09:47:58 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|1
total_score: 50/70
dfa6b61
Sat 23 Mar 2024 09:48:39 PM UTC: 
 exercises.c | 17 +++--------------
 1 file changed, 3 insertions(+), 14 deletions(-)
 tests:  9|0
total_score: 70/70
9605dfa
Sat 23 Mar 2024 10:53:53 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  9|0
total_score: 70/70
e718aae
Sat 23 Mar 2024 10:54:44 PM UTC: 
 exercises.c | 28 ++++++++++++++--------------
 1 file changed, 14 insertions(+), 14 deletions(-)
 tests:  9|0
total_score: 70/70
86f3284
Sat 23 Mar 2024 10:55:39 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:99:17: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   99 |       *elemento = top(P1);
      |                 ^
exercises.c:104:17: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
  104 |       *elemento = top(PilaAux);
      |                 ^
exercises.c:99:17: error: ‘elemento’ may be used uninitialized [-Werror=maybe-uninitialized]
   99 |       *elemento = top(P1);
      |       ~~~~~~~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d61cd43
